nav-bar collapse fixed

--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ body {
 header {
     background-color: var(--black);
     position: fixed;
-    height: 90px;
+    padding: 10px;
     top: 0;
     width: 100%;
     z-index: 999;
